Remove Box2D searcher, add Windows toolchain file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8)
 project(GameOfLife)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -12,18 +12,12 @@ file(GLOB SRC_FILES
 
 add_executable(${EXECUTABLE_NAME} ${SRC_FILES})
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_SOURCE_PATH})
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules" ${CMAKE_SOURCE_PATH})
 
 find_package(SFML 2 REQUIRED system window graphics network audio)
 if(SFML_FOUND)
   include_directories(${SFML_INCLUDE_DIR})
   target_link_libraries(${EXECUTABLE_NAME} ${SFML_LIBRARIES})
-endif()
-
-find_package(Box2D 2 REQUIRED)
-if(BOX2D_FOUND)
-  include_directories(${BOX2D_INCLUDE_DIR})
-  target_link_libraries(${EXECUTABLE_NAME} ${BOX2D_LIBRARY})
 endif()
 
 include_directories("${PROJECT_SOURCE_DIR}/src")
